@@ -74,3 +74,5 @@ $Id$
 
 * Obey --sysconfdir.
 
+
+* Memory leak in auth-ldap?
