@@ -18,7 +18,7 @@ strip-domain: yes
 
 auth-passwd-enable:     yes
 
-auth-pam-enable:        no
+auth-pam-enable:        yes
 auth-pam-facility:      tpop3d
 auth-pam-mail-group:    mail
 
